--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build Application
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ ubuntu-latest ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
 
   test:
     name: Run Tests
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ ubuntu-latest ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -50,7 +50,7 @@ jobs:
 
   lint:
     name: Lint Code
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ ubuntu-latest ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -65,7 +65,7 @@ jobs:
 
   docker-build:
     name: Build Docker Image
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ ubuntu-latest ]
     needs: [build, test, lint]
     steps:
       - name: Checkout code
@@ -76,7 +76,7 @@ jobs:
 
   docker-push:
     name: Push Docker Image
-    runs-on: [ self-hosted, solinas ]
+    runs-on: [ ubuntu-latest ]
     needs: docker-build
     if: github.ref == 'refs/heads/main'
     steps:
